report loss for mbSRR

--- a/example.ipynb
+++ b/example.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 88,
    "id": "234d2cff-3173-41ff-a9e7-40fbf454f105",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "id": "2b381d89-1590-40e5-a04e-3bee1e8f6c17",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 90,
    "id": "e0df7e5e-6b75-40d3-951e-100a2e372666",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 91,
    "id": "1cb819e0-2cb1-40c0-9f65-0eef6fd73293",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 92,
    "id": "4257f86f-ac5c-4e94-8f4b-72f4a23f1612",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 93,
    "id": "7b3f203b-4237-45ab-842e-2a650914b042",
    "metadata": {},
    "outputs": [],
@@ -139,14 +139,15 @@
    "source": [
     "## Imaging model M\n",
     "\n",
-    "single or multiple images.\n",
+    "From one image to one (or more) images with lower spatial resolution\n",
+    "\n",
     "- Change of coordinates, orthogonal rotation\n",
     "- Blurring and downsampling as a strided convolution."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 94,
    "id": "f798dc0b-b0a3-4725-b6c8-4b5069d6d6c0",
    "metadata": {},
    "outputs": [],
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 95,
    "id": "30c97904-42aa-4cf2-a1a7-307c579f575a",
    "metadata": {},
    "outputs": [],
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 96,
    "id": "5c7c194e-ca28-40cb-951f-baa1f3997712",
    "metadata": {},
    "outputs": [],
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 97,
    "id": "b1d82f8a-3a76-4ea9-8a5b-6eebd6398587",
    "metadata": {},
    "outputs": [
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 106,
    "id": "297e6190-a317-4c0b-b4ef-182b8e6d26bd",
    "metadata": {},
    "outputs": [],
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 107,
    "id": "e36d1651-cb2d-4167-b4c3-85b563049f7f",
    "metadata": {},
    "outputs": [
@@ -532,92 +533,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "it 0: 0.11247030645608902\n",
-      "it 1: 0.08467921614646912\n",
-      "it 2: 0.0617021881043911\n",
-      "it 3: 0.043278928846120834\n",
-      "it 4: 0.02907378226518631\n",
-      "it 5: 0.018651321530342102\n",
-      "it 6: 0.011493653990328312\n",
-      "it 7: 0.007034925743937492\n",
-      "it 8: 0.004691973328590393\n",
-      "it 9: 0.003891842206940055\n",
-      "it 10: 0.0041021197102963924\n",
-      "it 11: 0.004861402325332165\n",
-      "it 12: 0.0058017875999212265\n",
-      "it 13: 0.006657920312136412\n",
-      "it 14: 0.007263054605573416\n",
-      "it 15: 0.007536335848271847\n",
-      "it 16: 0.007465648930519819\n",
-      "it 17: 0.007088971324265003\n",
-      "it 18: 0.006476069334894419\n",
-      "it 19: 0.005711780395358801\n",
-      "it 20: 0.004881862085312605\n",
-      "it 21: 0.004062180873006582\n",
-      "it 22: 0.0033116491977125406\n",
-      "it 23: 0.002668981207534671\n",
-      "it 24: 0.002152864122763276\n",
-      "it 25: 0.0017647594213485718\n",
-      "it 26: 0.0014933134661987424\n",
-      "it 27: 0.001319298055022955\n",
-      "it 28: 0.001220161677338183\n",
-      "it 29: 0.0011735857697203755\n",
-      "it 30: 0.001159823965281248\n",
-      "it 31: 0.0011628917418420315\n",
-      "it 32: 0.001170853734947741\n",
-      "it 33: 0.001175511977635324\n",
-      "it 34: 0.0011717783054336905\n",
-      "it 35: 0.0011569459456950426\n",
-      "it 36: 0.0011299955658614635\n",
-      "it 37: 0.0010910214623436332\n",
-      "it 38: 0.0010408182861283422\n",
-      "it 39: 0.000980639480985701\n",
-      "it 40: 0.0009120975737459958\n",
-      "it 41: 0.0008371499716304243\n",
-      "it 42: 0.0007581072859466076\n",
-      "it 43: 0.0006776045775040984\n",
-      "it 44: 0.0005984984454698861\n",
-      "it 45: 0.000523676339071244\n",
-      "it 46: 0.000455800152849406\n",
-      "it 47: 0.00039702694630250335\n",
-      "it 48: 0.0003487634239718318\n",
-      "it 49: 0.00031150912400335073\n",
-      "it 50: 0.0002848230942618102\n",
-      "it 51: 0.0002674268325790763\n",
-      "it 52: 0.00025742585421539843\n",
-      "it 53: 0.0002526094322092831\n",
-      "it 54: 0.0002507723111193627\n",
-      "it 55: 0.0002500023692846298\n",
-      "it 56: 0.00024888862390071154\n",
-      "it 57: 0.00024662326904945076\n",
-      "it 58: 0.00024299287179019302\n",
-      "it 59: 0.00023827626137062907\n",
-      "it 60: 0.00023307993251364678\n",
-      "it 61: 0.00022814798285253346\n",
-      "it 62: 0.00022418204753194004\n",
-      "it 63: 0.00022170052397996187\n",
-      "it 64: 0.00022095322492532432\n",
-      "it 65: 0.00022189776063896716\n",
-      "it 66: 0.00022423159680329263\n",
-      "it 67: 0.00022746482864022255\n",
-      "it 68: 0.00023101533588487655\n",
-      "it 69: 0.00023430616420228034\n",
-      "it 70: 0.00023684822372160852\n",
-      "it 71: 0.00023829727433621883\n",
-      "it 72: 0.0002384800318395719\n",
-      "it 73: 0.00023739051539450884\n",
-      "it 74: 0.0002351638104300946\n",
-      "it 75: 0.00023203479941003025\n",
-      "it 76: 0.00022829178487882018\n",
-      "it 77: 0.0002242327609565109\n",
-      "it 78: 0.0002201304741902277\n",
-      "it 79: 0.00021620813640765846\n"
+      "Loss at 0: 0.11247030645608902\n",
+      "Loss at 10: 0.005051947198808193\n",
+      "Loss at 20: 0.0065752253867685795\n",
+      "Loss at 30: 0.00211572484113276\n",
+      "Loss at 40: 0.0016855024732649326\n",
+      "Loss at 50: 0.0011882169637829065\n",
+      "Loss at 60: 0.001129336073063314\n",
+      "Loss at 70: 0.001071388483978808\n"
      ]
     }
    ],
    "source": [
     "# Cost function\n",
-    "loss_fn = torch.nn.MSELoss()\n",
+    "cost_fn = torch.nn.MSELoss()\n",
     "\n",
     "# Regularization\n",
     "reg_fn = TotalVariation()\n",
@@ -632,18 +561,18 @@
     "# Run optim\n",
     "for i in range(n_iter):\n",
     "    Mx_list = M(rec) \n",
-    "    cost = loss_fn(torch.cat([torch.flatten(Mx) for Mx in Mx_list]), torch.cat([torch.flatten(y) for y in y_list])) \n",
+    "    cost = cost_fn(torch.cat([torch.flatten(Mx) for Mx in Mx_list]), torch.cat([torch.flatten(y) for y in y_list])) \n",
     "    reg = reg_fn(rec)\n",
     "    loss = cost + reg_weight * reg\n",
     "    loss.backward()\n",
     "    optim.step()\n",
     "    optim.zero_grad()\n",
-    "    print(f\"it {i}: {cost.item()}\")"
+    "    if i % 10 == 0: print(f\"Loss at {i}: {loss.item()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 108,
    "id": "34012b73-5a1f-4e91-a138-851de0ae4ba9",
    "metadata": {},
    "outputs": [
@@ -667,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 109,
    "id": "11130df2-75c0-4d8c-8ea7-8a5b232be7a0",
    "metadata": {},
    "outputs": [],
@@ -685,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 110,
    "id": "de457366-d2c5-4ff3-9682-5d892da8c995",
    "metadata": {},
    "outputs": [
@@ -746,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 113,
    "id": "ae3c74b7-48af-4fb0-a995-82c42755c9dd",
    "metadata": {},
    "outputs": [],
@@ -758,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 114,
    "id": "b0b37c28-7fee-4bda-afe2-42f998b99cb9",
    "metadata": {},
    "outputs": [
@@ -781,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 115,
    "id": "13847511-6d2e-4c7f-9974-a435065456f8",
    "metadata": {},
    "outputs": [],
@@ -799,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 116,
    "id": "a2cef878-c321-42a0-b895-88f258102470",
    "metadata": {},
    "outputs": [
@@ -862,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 117,
    "id": "4f63f2a4-4471-4ba1-a2ed-0ee226b2c6de",
    "metadata": {},
    "outputs": [],
@@ -874,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 118,
    "id": "b1c8ad56-70bc-4042-847b-b3ec1789d130",
    "metadata": {},
    "outputs": [
